load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle : exclude build
# gazelle:prefix github.com/kruemelmann/komodo/
gazelle(name = "gazelle")

gazelle(
    name = "gazelle-update-repos",
    args = [
        "-from_file=go.mod",
        "-to_macro=deps.bzl%go_dependencies",
        "-prune",
    ],
    command = "update-repos",
)

go_library(
    name = "komodo",
    srcs = ["embed.go"],
    importpath = "github.com/kruemelmann/komodo/",
    visibility = ["//visibility:public"],
)
