load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "ui",
    srcs = ["embed.go"],
    embedsrcs = [
        "komodo/index.html",
        "komodo/main.js",
        "komodo/styles.css",
    ],
    importpath = "github.com/kruemelmann/komodo/pkg/ui",
    visibility = ["//visibility:public"],
)
