load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "web",
    srcs = [
        "handler.go",
        "server.go",
        "ws.go",
    ],
    importpath = "github.com/kruemelmann/komodo/pkg/web",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_gorilla_handlers//:go_default_library",
        "@com_github_gorilla_mux//:mux",
        "@com_github_gorilla_websocket//:go_default_library",
    ],
)
