load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "web",
    srcs = [
        "handler.go",
        "server.go",
        "ws.go",
    ],
    importpath = "github.com/kruemelmann/komodo/pkg/web",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/ui",
        "@com_github_gorilla_handlers//:handlers",
        "@com_github_gorilla_mux//:mux",
        "@com_github_gorilla_websocket//:websocket",
    ],
)
