load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "cmd",
    srcs = [
        "build.go",
        "root.go",
    ],
    importpath = "github.com/kruemelmann/komodo/cmd/komodo/cmd",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/command",
        "//pkg/watcher",
        "@com_github_spf13_cobra//:cobra",
    ],
)
